manifest/objects/CPQU__CPQ_SF_Mapping_Field__mdt.object
<CustomObject>
    <fields>
        <fullName>CPQU__CPQ_API_Field_Name__c</fullName>
        <label>CPQ API Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQU__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQU__Mapping_Level__c</fullName>
        <label>Mapping Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                    <default>true</default>
                    <label>Quote</label>
                </value>
                <value>
                    <fullName>Quote Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPQU__SF_API_Field_Name__c</fullName>
        <label>SF API Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CPQ SF Mapping Field</label>
    <pluralLabel>CPQ SF Mapping Fields</pluralLabel>
</CustomObject>